un site qui claque

--- a/content/index/hero/hero.mdx
+++ b/content/index/hero/hero.mdx
@@ -1,9 +1,9 @@
 ---
-greetings: "Hello"
-icon: "waving-hand.png"
-title: "I'm a Gatsby Starter"
-subtitlePrefix: "I create awesome "
-subtitle: "one-page portfolios"
+greetings: "Salut les kids"
+icon: "eggplant.png"
+title: "Je veins juste de débuter avec Gatsby"
+subtitlePrefix: "Je créé des choses "
+subtitle: "INCROYABLES !"
 ---
 
-A modern portfolio with a minimalistic design.
+En vrai c'est drôle comme workshop.
