--- a/content/index/contact/contact.mdx
+++ b/content/index/contact/contact.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Issues?"
-name: "Gatsby Starter Portfolio Minimal"
-email: "mail@example.com"
-profileImage: "../../favicon.png"
+title: "T'as un blèm?"
+name: "Voilà mon mail gros bg"
+email: "baptiste.renouf@epitech.eu"
+profileImage: "../../bapt.png"
 ---
 
 import Underlining from "../../../src/styles/underlining";
 
-If you have any problems with this starter, create an issue in the <a href="https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"><Underlining>GitHub repository</Underlining></a>.
+Si t'as un problème hésite pas à aller te faire mettre ici : <a href="https://github.com/Tsaef" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"><Underlining>GitHub profil</Underlining></a>.
