--- a/content/index/hero/hero.mdx
+++ b/content/index/hero/hero.mdx
@@ -1,6 +1,6 @@
 ---
 greetings: "Salut les kids"
-icon: "eggplant.png"
+icon: "waving-hand.png"
 title: "Je veins juste de débuter avec Gatsby"
 subtitlePrefix: "Je créé des choses "
 subtitle: "INCROYABLES !"
