--- a/content/index/contact/contact.mdx
+++ b/content/index/contact/contact.mdx
@@ -7,4 +7,4 @@ profileImage: "../../bapt.png"
 
 import Underlining from "../../../src/styles/underlining";
 
-Si t'as un problème hésite pas à aller te faire mettre ici : <a href="https://github.com/Tsaef" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"><Underlining>GitHub profil</Underlining></a>.
+Si t'as un problème hésite pas à aller voir ailleurs : <a href="https://github.com/Tsaef" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"><Underlining>GitHub profil</Underlining></a>.
