--- a/content/index/projects/content-integration/index.mdx
+++ b/content/index/projects/content-integration/index.mdx
@@ -2,7 +2,7 @@
 title: "No external CMS needed!"
 category: "Markdown Content"
 emoji: "📓"
-screenshot: "./mdx-example.png"
+screenshot: "./stonks.png"
 github: "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal"
 external: "https://www.gatsbyjs.org/docs/mdx/writing-pages/"
 tags:
